2010-05-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac
	[ 3004232 ] configure.ac allows slp-standalone and checks for sfcc
	(second hunk was not applied)

2010-05-21 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* tests/slptest/slpTests.sh, Makefile.am, README,
          cimslp.c, cimslp.h, cimslpCMPI.c, cimslpCMPI.h 
	  cimslpSLP.c, cimslpSLP.h, cimslpUtil.c, cimslpUtil.h,
          configure.ac, control.c, profileProvider.c,
          sfcBroker.c, sfcb.cfg.pre.in
        [ 3004257 ] slp information in README is not current
        [ 3004232 ] configure.ac allows slp-standalone and checks for sfcc
        [ 3003508 ] slpTests.sh uses bash-isms
        [ 2987170 ] Handle SLP in a provider

2010-05-21 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	* indCIMXMLHandler.c:
	[ 3005508 ] Warning in indCIMXMLHandler.c 

2010-05-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	[ 3005424 ] Memory leak on error responses

	* Makefile.am:
	[ 3005574 ] make clean does not remove cimXmlParserProcessed.c

	* Makefile.am:
	[ 2987170 ] Handle SLP in a provider
        (missing cimslp headers in no_inst_HEADERS)
	
2010-05-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/TestProviders/tests/IndRetryTest.sh:
	[ 2964568 ] Indication stress test

2010-05-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3004992 ] Sporadic deadlock on multiple failing indications

2010-05-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	[ 3004996 ] Typo in instance.c

2010-05-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 3004358 ] indCIMXMLHanlder ci can leak on error condition

2010-05-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* profileProvider.c, providerMgr.c, default.reg.in:
	[ 3002851 ] SLP needs to register at startup

2010-05-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	[ 3001879 ] Remove SLP sections from internalProvider
